feat(crud): ingredient controller ready
